--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+
 name: Generate Datas
 on:
   schedule: # execute every 12 hours
@@ -7,18 +8,17 @@ on:
 jobs:
   build:
     name: Jobs to update datas
-    runs-on: ubuntu-latest
-    steps:
+@@ -11,12 +12,13 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
-  with:
-    github_user_name: Fellow3-1
-    svg_out_path: dist/github-contribution-grid-snake.svg
-
+        id: snake-gif
+        with:
+          github_user_name: Fellow3-1
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
-  with:
-    target_branch: output
-    build_dir: dist
+        with:
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
